--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,10 @@
     <!-- ActiveMQ -->
     <dependency>
       <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-core</artifactId>
-      <version>5.7.0</version>
+      <artifactId>activemq-all</artifactId>
+      <version>5.10.0</version>
     </dependency>
     <!-- ActiveMQ -->
-
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.6</version>
-    </dependency>
 
   </dependencies>
 </project>
